# single-agent-ai-research-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  research.db  test_models.py  test_search.py
.github/workflows/: ci.yml
app/: main.py
app/api/: routes.py  routes_old.py  translate.py  v1.py
app/api/routes/: __init__.py  health.py  history.py  llm.py  research.py  translation_pdf.py
app/core/: config.py  lifespan.py  logger.py  request_id.py  timer.py
app/database/: crud.py  database.py  models.py
app/dependencies/: database.py
app/exceptions/: custom_exceptions.py  handlers.py
app/exports/: markdown_exporter.py  pdf_exporter.py
app/graph/: clarification_router.py  graph.py  memory_router.py  nodes.py  planner_router.py  router.py  state.py
app/llm/: base.py  factory.py  groq_provider.py  openai_provider.py
app/prompts/: evaluation_prompt.py  planner_prompt.py  research_prompt.py  rewrite_prompt.py  translation_prompt.py
app/schemas/: llm.py  research.py  response.py  translation.py
app/services/: llm_service.py  research_service.py  translator.py
app/tasks/: research_tasks.py
app/tools/: database.py  search.py  wikipedia.py
frontend/: api.py  app.py  config.py  theme.py
frontend/components/: feature_chips.py  hero.py
frontend/views/: research.py  translator.py
scripts/: test_graph.py
tests/: conftest.py  test_health.py  test_research.py
