[project]
name = "single-agent-ai-research-assistant"
version = "0.1.0"
description = "A production-grade Single-Agent AI Research Assistant built with FastAPI, LangGraph, and modern AI engineering practices."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

authors = [
    { name = "Drishti Saha" }
]

keywords = [
    "ai",
    "agentic-ai",
    "langgraph",
    "fastapi",
    "llm",
    "research-assistant",
    "genai",
    "rag",
]

dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",

    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",

    "python-dotenv>=1.1.0",

    "loguru>=0.7.3",

    "httpx>=0.28.1",
]

[project.optional-dependencies]

dev = [
    "pytest>=8.4.0",
    "ruff>=0.12.0",
    "pre-commit>=4.2.0",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]

testpaths = [
    "tests"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
]