[project]
name = "single-agent-ai-research-assistant"
version = "0.2.0"
description = "A production-grade Single-Agent AI Research Assistant built with FastAPI and modern AI engineering practices."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"

authors = [
    { name = "Drishti Saha" }
]

keywords = [
    "ai",
    "agentic-ai",
    "fastapi",
    "llm",
    "research-assistant",
    "genai",
    "rag",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",

    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",

    "python-dotenv>=1.1.0",

    "loguru>=0.7.3",

    "httpx>=0.28.1",

    "groq>=0.30.0",

    "openai>=1.99.0",

    "ddgs>=9.5.2",

    "langgraph>=0.6.0",
    "langchain-core>=0.3.0",

    "sqlalchemy>=2.0.41",
    "reportlab>=4.2.0",
    "markdown>=3.8",

]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.12.0",
    "pre-commit>=4.2.0",
]


[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"


    